change image name and design hero section

--- a/main.css
+++ b/main.css
@@ -19,3 +19,7 @@ body{
 .navbar-collapse{
     justify-content: flex-end;
 }
+.cust__bg{
+    background: url(images/bg-main.jpg);
+    min-height: 50vh;
+}
