--- a/main.css
+++ b/main.css
@@ -44,7 +44,7 @@ body{
 
 @media screen and (max-width:768px) {
     
-    .cust__md__col{
+    .cust__md__row{
         flex-direction: column;
     }
     .card{
