--- a/main.css
+++ b/main.css
@@ -39,7 +39,11 @@ body{
     overflow: hidden;
     max-width: 100%;
     border-radius: 4px;
+    object-fit: cover;
+    aspect-ratio: 1/0.7;
+    width: 100%;
 }
+
 
 
 @media screen and (max-width:768px) {
